--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,9 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Dashboard~~~</h1>
-    <p>Yoyoyoyoyoyo~~~</p>
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/javascripts/questions.js"></script>
+    <div id='questions'></div>
   </body>
 </html>
