--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/javascripts/questions.js"></script>
+    <button id='test-btn'>test</button>
     <div id='questions'></div>
   </body>
 </html>
