Add helper and many controllers.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,7 @@
     <title>Dashboard</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body data-room-id="<%= roomId %>">
     <h1>Dashboard~~~</h1>
     <p>Yoyoyoyoyoyo~~~</p>
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
