--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,18 +10,18 @@
       <h1><%= title %></h1>
       <div class="section">
         <form>
-            <legend>1.請輸入HTML Slide網址</legend>
+            <legend>1. 請輸入HTML Slide網址</legend>
             <input type="text" placeholder="輸入HTML Slide網址"> </br>
             <button class="btn" type="sumbit">產生script</button>
         </form>
       </div>
       <div class="section">
-        <legend>2.複製下面script到<code>&lt;/body&gt;</code>前</legend>
+        <legend>2. 複製下面script到<code>&lt;/body&gt;</code>前</legend>
         <div class="script">
           &lt;script type="text/javascript" src="/javascripts/dependencies.js"&gt;&lt;/script &gt;
         </div>
       </div>
-      <button class="btn btn-success start" type="button">開始上課</button>
+      <button class="btn btn-info start" type="button">開始上課</button>
     </div>
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
