--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,18 +20,23 @@
         <code class="student-url">
         </code>
       </div>
-      <div class="question-queue scrollable" style="height: 300px; overflow-y: auto">
-        <div clas="one-question">yooooooo i have one question at there, chap 7.</div>
-        <div clas="one-question">yooooooo i have one question at there, chap 7.</div>
-        <div clas="one-question">yooooooo i have one question at there, chap 7.</div>
+      <div class="question-queue">
+        <div class="one-question">
+          <div class="content">yooooooo i have one question at there, chap 7. yooooooo i have one question at there, chap 7. yooooooo i have one question at there, chap 7.</div>
+          <div class="plus"></div>
+        </div>
+        <div class="one-question">
+          <div class="content">yooooooo i have one question at there, chap 7.</div>
+          <div class="plus"></div>
+        </div>
+        <div class="one-question"><div class="content">yooooooo i have one question at there, chap 7.</div></div>
+          <div class="plus"></div>
       </div>
-      <button class="btn btn-info over-btn" type="button">結束上課</button>
+      <button class="btn btn-warning over-btn" type="button">結束上課</button>
     </div>
 
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/javascripts/questions.js"></script>
-    <button id='test-btn'>test</button>
-    <div id='questions'></div>
   </body>
 </html>
