--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,7 +22,7 @@
       </div>
       <div class="question-queue">
         <div class="one-question">
-          <div class="content">yooooooo i have one question at there, chap 7. yooooooo i have one question at there, chap 7. yooooooo i have one question at there, chap 7.</div>
+          <div class="content"></div>
           <div class="plus"></div>
         </div>
         <div class="one-question">
@@ -38,5 +38,6 @@
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/javascripts/questions.js"></script>
+    <script type="text/javascript" src="/javascripts/dashboard.js"></script>
   </body>
 </html>
