--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div class="row">      
+    <div class="row">
       <h1><%= title %></h1>
       <div class="section">
-        <form>
-            <legend>1. 請輸入HTML Slide網址</legend>
-            <input type="text" placeholder="輸入HTML Slide網址"> </br>
-            <button class="btn" type="sumbit">產生script</button>
+        <form method="post" action="/create">
+          <legend>1. 請輸入HTML Slide網址</legend>
+          <input type="text" name="url" placeholder="輸入HTML Slide網址"> </br>
+          <button class="btn" type="sumbit">產生script</button>
         </form>
       </div>
       <div class="section">
