--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,10 +20,11 @@
         <code class="student-url">
         </code>
       </div>
-      <div class="question-queue">
+      <div class="question-queue scrollable">
       </div>
       <button class="btn btn-warning over-btn" type="button">結束上課</button>
     </div>
+    <button class="add-question btn btn-warning over-btn" type="button">AddQuestion</button>
 
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
