--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,7 +20,7 @@
         <code class="student-url">
         </code>
       </div>
-      <div class="question-queue scrollable">
+      <div class="ihq-question-queue scrollable">
       </div>
       <button class="btn btn-warning over-btn" type="button">結束上課</button>
     </div>
