--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,10 @@
         </div>
         <div class="section">
           <legend>2. 複製下面 HTML 標記到 <code>&lt;/body&gt;</code> 前</legend>
-          <div class="script">
-            &lt;script type="text/javascript" src="<%=  embedUrl %>"&gt;&lt;/script &gt;
-          </div>
+          <pre class="script">
+&lt;script type="text/javascript"
+ src="<%= embedUrl %>"&gt;&lt;/script&gt;
+          </pre>
         </div>
         <button class="btn btn-info start" type="submit">開始上課</button>
       </div>
