--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,6 +28,7 @@
 
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/javascripts/socket.js"></script>
     <script type="text/javascript" src="/javascripts/questions.js"></script>
     <script type="text/javascript" src="/javascripts/dashboard.js"></script>
   </body>
