Print student URL.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,6 +18,7 @@
       <div class='for-student'>
         學生URL</br>
         <code class="student-url">
+          <%= studentUrl %>
         </code>
       </div>
       <div class="ihq-question-queue scrollable">
