--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,24 +6,26 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body data-room-id="<%= roomId %>">
-    <div class="left-section">
-      <div class="slide-window"></div>
-      <div>
-        <div class="clock"><iframe src="http://free.timeanddate.com/clock/i3nnv4bw/n241/fn13/fc333/tceee/pc000/pa5" frameborder="0" width="91" height="26"></iframe>
+    <div class="main">
+      <div class="left-section">
+        <div class="slide-window"></div>
+        <div>
+          <div class="clock"><iframe src="http://free.timeanddate.com/clock/i3nnv4bw/n241/fn13/fc333/tceee/pc000/pa5" frameborder="0" width="91" height="26"></iframe>
+          </div>
+          <button class="btn btn-warning over-btn" type="button">結束上課</button>
+          <button class="btn btn-info project-btn" type="button">產生投影視窗</button>
         </div>
-        <button class="btn btn-info project-btn" type="button">產生投影視窗</button>
       </div>
-    </div>
-    <div class="right-section">
-      <div class='for-student'>
-        學生URL</br>
-        <code class="student-url">
-          <%= studentUrl %>
-        </code>
+      <div class="right-section">
+        <div class='for-student'>
+          <span>學生URL連結:</span>
+          <div class="student-url">
+            <%= studentUrl %>
+          </div>
+        </div>
+        <div class="ihq-question-queue scrollable">
+        </div>
       </div>
-      <div class="ihq-question-queue scrollable">
-      </div>
-      <button class="btn btn-warning over-btn" type="button">結束上課</button>
     </div>
 
     <script type="text/javascript" src="/javascripts/dependencies.js"></script>
