--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,16 +14,18 @@
           </div>
           <button class="btn btn-warning over-btn" type="button">結束上課</button>
           <button class="btn btn-info project-btn" type="button">產生投影視窗</button>
+          <button class="add-question btn btn-info project-btn" type="button">AddQuestion</button>
         </div>
       </div>
       <div class="right-section">
         <div class='for-student'>
-          <span>學生URL連結:</span>
+          <div class="subtitle">學生URL連結:</div>
           <div class="student-url">
             <%= studentUrl %>
           </div>
         </div>
         <div class="ihq-question-queue scrollable">
+        <div class="subtitle">問題列</div>
         </div>
       </div>
     </div>
