--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/todc-bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body data-room-id="<%= roomId %>">
+  <body data-room-id="<%= roomId %>" role='server'>
     <div class="main">
       <div class="left-section">
         <div class="slide-window"></div>
