--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,20 +159,22 @@ input{
 .ihq-tool-box .ihq-question-queue{
   width: 150px;
   height: 100%;
+  font-size: 14px;
 }
 .ihq-tool-box .plus{
   width:25px;
   height: 25px;
 }
 
-.ihq-endter-question{
+.ihq-enter-question{
   font-size: 14px;
-  margin: 4px
+  margin: 4px;
+  margin-top: 7px;
 }
 
 .ihq-popup-window{
   border-radius: 3px;
-  background: rgba(127, 226, 198, 0.9);
+  background: rgba(211, 234, 255, 1);
   width: 174px;
   height: 108px;
   box-shadow: 1px 2px 5px rgba(0,0,0,0.8);
@@ -184,7 +186,11 @@ input{
 }
 
 .ihq-popup-window button{
-  font-size: 15px;
+  font-size: 14px;
+}
+
+.repeat-btn,.question-text{
+  margin-bottom: 7px;
 }
 
 
@@ -198,7 +204,7 @@ input{
   
   white-space: nowrap;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 13px;
   text-align: center;
   vertical-align: middle;
@@ -223,7 +229,8 @@ input{
   box-shadow: none;
 }
 .ihq-btn:hover {
-  text-shadow: 0 1px 0 #fff;
+  box-shadow: 0 1px 2px black;
+  color: black;
   /*text-shadow: none;*/
   border-color: #c6c6c6;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -292,7 +299,7 @@ input{
   background-color: #f3f3f3;
 }
 
-.ihq-btn-warning {
+.ihq-btn-warning, .ihq-btn-info{
   border: 1px solid #faa328;
   color: #ffffff;
   background-color: #fbb046;
@@ -309,7 +316,11 @@ input{
 .ihq-btn-warning:hover,
 .ihq-btn-warning:active,
 .ihq-btn-warning.active,
-.ihq-btn-warning:focus {
+.ihq-btn-warning:focus,
+.ihq-btn-info:hover,
+.ihq-btn-info:active,
+.ihq-btn-info.active,
+.ihq-btn-info:focus {
   border: 1px solid #f9980f;
   color: #ffffff;
   background-color: #faac3c;
@@ -365,8 +376,84 @@ input{
   background-color: #fbb450 \9;
 }
 
+.ihq-btn-info {
+  border: 1px solid #46b8da;
+  color: #ffffff;
+  background-color: #5bc0de;
+  background-image: -moz-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#5bc0de));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: -o-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: linear-gradient(to bottom, #5bc0de, #5bc0de);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff5bc0de', GradientType=0);
+  *background-color: #5bc0de;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.ihq-btn-info:hover,
+.ihq-btn-info:active,
+.ihq-btn-info.active,
+.ihq-btn-info:focus {
+  border: 1px solid #31b0d5;
+  color: #ffffff;
+  background-color: #53bddc;
+  background-image: -moz-linear-gradient(top, #5bc0de, #46b8da);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#46b8da));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #46b8da);
+  background-image: -o-linear-gradient(top, #5bc0de, #46b8da);
+  background-image: linear-gradient(to bottom, #5bc0de, #46b8da);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff46b8da', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #46b8da;
+  background-color: #46b8da \9;
+}
+.ihq-btn-info:active,
+.ihq-btn-info.active {
+  border: 1px solid #28a1c5;
+  background-color: #4ab9db;
+  background-image: -moz-linear-gradient(top, #5bc0de, #31b0d5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#31b0d5));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #31b0d5);
+  background-image: -o-linear-gradient(top, #5bc0de, #31b0d5);
+  background-image: linear-gradient(to bottom, #5bc0de, #31b0d5);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff31b0d5', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.ihq-btn-info:focus {
+  border: 1px solid #46b8da;
+  -webkit-box-shadow: inset 0 0 0 1px #ffffff;
+  -moz-box-shadow: inset 0 0 0 1px #ffffff;
+  box-shadow: inset 0 0 0 1px #ffffff;
+}
+.ihq-btn-info.disabled,
+.ihq-btn-info[disabled],
+.ihq-btn-info.disabled:hover,
+.ihq-btn-info[disabled]:hover,
+.ihq-btn-info.disabled:active,
+.ihq-btn-info[disabled]:active,
+.ihq-btn-info.disabled:focus,
+.ihq-btn-info[disabled]:focus {
+  border: 1px solid #46b8da;
+  background-image: -moz-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#5bc0de));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: -o-linear-gradient(top, #5bc0de, #5bc0de);
+  background-image: linear-gradient(to bottom, #5bc0de, #5bc0de);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff5bc0de', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-color: #5bc0de;
+  background-color: #5bc0de \9;
+}
+
 .add-question{
   margin:10px 10px; 
   /*margin-left: auto;*/
   /*margin-right./: auto;*/
+}
+
+.add-question:hover {
+  box-shadow: 0 1px 2px rgb(88,88,88);
 }
