add test page and iframe

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
   <body data-room-id="<%= roomId %>" role='server'>
     <div class="main">
       <div class="left-section">
-        <div class="slide-window"></div>
+        <iframe src='<%= studentUrl %>&sync=1' class='slide-window'></iframe>
         <div>
           <div class="clock"><iframe src="http://free.timeanddate.com/clock/i3nnv4bw/n241/fn13/fc333/tceee/pc000/pa5" frameborder="0" width="91" height="26"></iframe>
           </div>
