--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,6 +93,7 @@ input{
 }
 .desc, .content{
 	display: inline-block;
+  vertical-align: top;
 }
 
 .plus{
@@ -104,14 +105,12 @@ input{
   background: rgba(240, 150, 79, 1);
 }
 
-.plus .delete{
+.plus, .delete{
 	margin-left: 2px;
-  height: 15px;
+  /*height: 15px;*/
   width: 30px;
   margin-bottom: 5px;
-}
-.plus{
-  line-height: 25px;
+  line-height: 22px;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0px 1px 2px black;
@@ -171,6 +170,7 @@ input{
 	height:100%;
 	width:150px;
 	top:0px;
+  z-index: 1000000;
 }
 .ihq-tool-box .content{
   width: 116px;
@@ -587,4 +587,5 @@ input{
   height:30px;
   background-repeat: no-repeat; 
   background-size:30px 30px;
+  z-index: 10000000000;
 }
