--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,26 +24,23 @@ src="<%= embedUrl %>" id="°▽°ﾉ" data-room-id="<%= roomId %>"&gt;&lt;/scrip
 
       <div class="alert alert-block alert-info">
         <h4>Cookie 的使用</h4>
-        <p>我們使用您正瀏覽此頁面之 Cookie 來判斷您是否為講者、並顯示講者頁面。</p>
+        <p>我們使用您正瀏覽此頁面之 Cookie 來判斷您是否為講者、並顯示講者介面。</p>
         <p>若講者要在自己的電腦上顯示學生介面，請使用無痕 / 隱私瀏覽模式。</p>
       </div>
 
       <hr>
       
       <form class="alert alert-block" method="post" action="renew">
-        <h4>變更教室號碼</h4>
-        <p>我們已記錄您擔任講者的教室號碼為 「<%= roomId %>」。</p>
-        <p>進入同一個教室號碼的您與學生，將會看到同屬此教室的發問問題。</p>
-        <p>若要講新的投影片，請按「變更教室號碼」取得新的教室號碼，否則學生將看到上一份投影片裡的問題。您能擁有的教室號碼只有一個，按下「變更教室號碼」之後，您就不是「<%= roomId %>」的講者了。</p>
+        <h4>投影片編號</h4>
+        <p>我們已記錄您擔任講者的投影片編號為 「<%= roomId %>」。</p>
+        <p>點進同一份投影片的老師和學生，會看到同一組問題。</p>
+        <p>若要講新的投影片，請按「取得新投影片編號」，否則學生們將看到上一份投影片裡的問題。要注意的是您只能主講一份投影片；在您取得新的投影片編號後，您就不是「<%= roomId %>」這份投影片的講者了。</p>
 
         <button type="submit" class="btn btn-danger">
-          變更教室號碼
+          取得新投影片編號
         </button>
       </form>
     </div>
 
-
-    <!-- // <script type="text/javascript" src="/javascripts/dependencies.js"></script> -->
-    <!-- // <script type="text/javascript" src="/socket.io/socket.io.js"></script> -->
   </body>
 </html>
