--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,10 @@
     <title>我有問題</title>
     <meta charset="utf-8">
     <link rel='stylesheet' href='/stylesheets/todc-bootstrap.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/index.css' />
   </head>
   <body>
+    <div class="logo"></div>
     <div class="row">
       <h1>我有問題 iHaveQuestion</h1>
 
@@ -41,6 +42,5 @@ src="<%= embedUrl %>" id="°▽°ﾉ" data-room-id="<%= roomId %>"&gt;&lt;/scrip
         </button>
       </form>
     </div>
-
   </body>
 </html>
