--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -202,6 +202,8 @@ input{
   height: 108px;
   box-shadow: 1px 2px 5px rgba(0,0,0,0.8);
   padding: 6px;
+  position: absolute;
+  z-index: 100000;
 }
 .ihq-popup-window input{
   width: 130px;
@@ -584,5 +586,6 @@ input{
   height:30px;
   background-repeat: no-repeat; 
   background-size:30px 30px;
-  z-index: 10000000000;
+  position: absolute;
+  z-index: 100000;
 }
