--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,41 +1,3 @@
-body {
-  padding: 10px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-
-.section{
-	margin-bottom: 30px;
-	padding-top: 20px;
-}
-
-.btn{
-	margin-top: 10px;
-}
-
-.start{
-	width:200px;
-	height: 50px;
-	margin-top: 10px;
-	font-size: 22px;
-}
-
-.script{
-	margin: 0;
-	width: 500px;
-	background: rgba(211,211,211,0.3);
-	width: 100%;
-}
-legend{
-	margin-bottom: 5px;
-}
-input{
-	width: 100%;
-}
-
 .ihq-question-queue{
 	width:302px;
 	height: 404px;
@@ -47,53 +9,30 @@ input{
 	overflow-x: hidden;
 }
 
-.slide-window{
-	width: 800px;
-	height: 600px;
-	/*border: 1px solid black;*/
-	box-shadow: 0px 1px 3px rgba(0,0,0,0.7);
-}
-
-.for-student{
-	width:100%;
-	/*height: 100px;*/
-}
-.subtitle{
-  font-size: 17px;
-  margin-bottom: 4px;
-  margin-top: 10px;
-}
-.student-url{
-	background: rgba(226, 246, 255, 0.8);
-  width:260px;
-  padding: 10px;
-  height: 100px;
-}
-
 .one-question{
 	width: 290px;
 	padding-bottom: 2px;
 	margin-bottom: 5px;
 }
-.content{
+.one-question .content{
 	border: 1px solid rgba(211,211,211,1);
 	width: 240px;
 	min-height: 50px;
   background: rgb(255,255,255);
 }
-.content:hover{
+.one-question .content:hover{
 	background: rgba(226, 246, 255, 0.8);
 }
-.desc{
+.one-question .desc{
   width:35px;
   height:35px;
 }
-.desc, .content{
+.one-question .desc, .one-question .content{
 	display: inline-block;
   vertical-align: top;
 }
 
-.plus{
+.one-question .plus{
   background: rgba(255, 179, 179, 1);
   /*display: none;*/
 }
@@ -116,40 +55,6 @@ input{
 .ihq-tool-box .plus:hover{
   cursor: pointer;
   background: rgba(255, 124, 124, 1);
-}
-
-.clock{
-	margin-top: 10px;
-}
-.clock, .project-window{
-	display: inline-block;
-}
-.project-btn, .over-btn{
-	float: right;
-	right: 10px;
-  margin-left: 5px; 
-}
-.left-section, .right-section{
-	display: inline-block;
-	vertical-align: top;
-	margin-right: 20px;
-	margin-left: 30px;
-}
-.left-section{
-	width:800px;
-}
-
-.right-section{
-	position: relative;
-	height: 638px;
-	width: 280px;
-}
-
-.over-ihq-btn{
-	position: absolute;
-	margin-top: 30px;
-	bottom: 0px;
-	left: 0px;
 }
 
 .main{
